--- a/basic_fsd/bookstore.html
+++ b/basic_fsd/bookstore.html
@@ -6,15 +6,9 @@
   <style>
     body{font-family:Arial,Helvetica,sans-serif;margin:0;padding:10px;background:#fff7f0}
     h3{margin-top:6px}
-    ul{padding-left:18px}<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <title>Right Frame - Welcome</title>
-  <style>
-    body{font-family:Arial,Helvetica,sans-serif;margin:18px;color:#222}
+    ul{padding-left:18px}
     h1{color:#b55d1a}
-    .box{border:1px solid #e6c8b0;padding:16px;border-radius:6px;background:#fff}
+.box{border:1px solid #e6c8b0;padding:16px;border-radius:6px;background:#fff}
   </style>
 </head>
 <body>
